<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Image Details -->
    <string name="details_camera_title">Camera</string>
    <string name="details_camera_default">NIKON D3200</string>

    <string name="details_aperture_title">Aperture</string>
    <string name="details_aperture_default">f/5.0</string>

    <string name="details_focal_title">Focal Length</string>
    <string name="details_focal_default">18.0mm</string>

    <string name="details_shutter_title">Shutter Speed</string>
    <string name="details_shutter_default">1/125s</string>

    <string name="details_iso_title">ISO</string>
    <string name="details_iso_default">100</string>

    <string name="details_dimensions_title">Dimensions</string>
    <string name="details_dimensions_default">3906 x 4882</string>

    <string name="details_views_title">Views</string>
    <string name="details_views_default">8.8M</string>

    <string name="details_downloads_title">Downloads</string>
    <string name="details_downloads_default">99.1K</string>

    <string name="details_likes_title">Likes</string>
    <string name="details_likes_default">1.8K</string>

</resources>