<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".SecondFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layout_practitioner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/image5"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_gravity="bottom|left"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imagePlayIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/pin" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="Oman, Mutrah"
                android:textColor="@color/black"
                android:textSize="20dp" />
        </LinearLayout>

    </FrameLayout>
</LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />


    <LinearLayout
        android:id="@+id/firstLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">




        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="0dp"
            app:cardCornerRadius="500dp">

            <ImageView
                android:layout_width="110dp"
                android:scaleType="center"
                android:layout_height="110dp"
                android:src="@drawable/userimage3"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_gravity="center_vertical|left"
            android:gravity="center_vertical|left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="20dp"
            android:layout_margin="2dp"
            android:text="Reham Albulushi"/>


        <LinearLayout
            android:layout_gravity="center_vertical|right"
            android:gravity="center_vertical|right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">



            <ImageView
                android:id="@+id/downloadbutton"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:layout_margin="2dp"
                android:src="@drawable/download" />

            <ImageView
                android:id="@+id/heartbutton"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:layout_margin="2dp"
                android:src="@drawable/heart" />

            <ImageView
                android:id="@+id/bookmarkbutton"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:layout_margin="2dp"
                android:src="@drawable/bookmark" />


        </LinearLayout>


    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/firstdevider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/firstLayout"
        android:background="#6F7378" />

    <LinearLayout
        android:id="@+id/imagedetailes_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Camera -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-medium"
                    android:maxLines="1"
                    android:text="@string/details_camera_title"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-light"
                    android:maxLines="1"
                    android:text="@string/details_camera_default"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="normal" />
            </LinearLayout>


            <!-- Aperture -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-medium"
                    android:maxLines="1"
                    android:text="@string/details_aperture_title"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-light"
                    android:maxLines="1"
                    android:text="@string/details_aperture_default"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="normal" />
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Focal Length -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-medium"
                    android:maxLines="1"
                    android:text="@string/details_focal_title"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-light"
                    android:maxLines="1"
                    android:text="@string/details_focal_default"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="normal" />
            </LinearLayout>


            <!-- Shutter Speed -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-medium"
                    android:maxLines="1"
                    android:text="@string/details_shutter_title"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-light"
                    android:maxLines="1"
                    android:text="@string/details_shutter_default"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="normal" />
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- ISO -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-medium"
                    android:maxLines="1"
                    android:text="@string/details_iso_title"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-light"
                    android:maxLines="1"
                    android:text="@string/details_iso_default"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="normal" />
            </LinearLayout>


            <!-- Dimensions -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-medium"
                    android:maxLines="1"
                    android:text="@string/details_dimensions_title"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-light"
                    android:maxLines="1"
                    android:text="@string/details_dimensions_default"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="normal" />
            </LinearLayout>

        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />
        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/seconddevider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/imagedetailes_layout"
            android:background="#6F7378" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imagedetailes2_layout">

            <include layout="@layout/image_detailes" />
        </LinearLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/thirddevider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/imagedetailes2_layout"
            android:background="#6F7378" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include layout="@layout/tags" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>
